--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: python
 python:
   - "2.7"
+
+branches:
+  only:
+    - master
+
+before_script:
+  - pip install Flask
+
+script:
+  - python map_jobs.py
+
