--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ branches:
     - master
 
 before_script:
-  - pip install Flask
-  - pip install Flask_Bower
-  - pip install Flask_Compress
-  - pip install Flask_Triangle
+  - pip3.6 install Flask
+  - pip3.6 install Flask_Bower
+  - pip3.6 install Flask_Compress
+  - pip3.6 install Flask_Triangle
 
 script:
-  - python map_jobs.py
+  - python3 map_jobs.py
 
 
