--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.6.9",
     "ngmap": "^1.18.4",
     "jquery": "^3.3.1",
-    "bootstrap": "^4.0.0"
+    "bootstrap": "^4.0.0",
+    "angularUtils-pagination": "https://github.com/michaelbromley/angularUtils-pagination.git#^0.11.1"
   }
 }
